--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-DATABASE_URI= mongodb+srv://oluwatomisin:oluwatomisin@cluster0.k4zdr.mongodb.net/TO-DO?retryWrites=true&w=majority
+# DATABASE_URI= mongodb+srv://oluwatomisin:oluwatomisin@cluster0.k4zdr.mongodb.net/TO-DO?retryWrites=true&w=majority
+DATABASE_URI= "mongodb://localhost:27017/NotesDB"
